3. Liquibase. Интеграционные тесты. [#504894 #368107]